# test

./: .travis.yml  CMakeLists.txt  makefile
src/: main.cpp
src/image/: stb_image_write.h
src/report001/: brdf.hpp  camera.hpp  intersection.hpp  main.cpp  material.hpp  object.hpp  ray.hpp  rng.hpp  scene.hpp  vec3.hpp
src/report001/renderer/: renderer.hpp  simple.hpp
